20230627-devops-simplicity/kubernetes/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "hello-ingress"
  namespace: "hello"
spec:
  rules:
    - http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "hello-service"
                port:
                  number: 80
...
